--- a/frontend-master-master/src/app/components/peliculas/listar-peliculas/listar-peliculas.component.html
+++ b/frontend-master-master/src/app/components/peliculas/listar-peliculas/listar-peliculas.component.html
@@ -50,6 +50,8 @@
         </form>
         </div>
       </div>
+      <br>
+        <button (click)="generarPDF()">PDF</button>&nbsp;&nbsp;
     </div>
     <div class="col-md-8">
         <table *ngIf="listPeliculas.length > 0" class="table table-striped">
